--- a/style.css
+++ b/style.css
@@ -86,3 +86,64 @@ h2 {
     font-size: 32px;
     font-weight: 400;
 }
+
+
+@media screen and (max-width :768px) {
+    .container{
+        display: block;
+        background-image: none;
+        background-repeat: no-repeat;
+    }
+
+    .container__conteudo{
+        width: 50vw;
+        display: block
+    }
+
+    .container__informacoes{
+        display: block;
+        margin: 2em 2em;
+        width: 50vw;
+    }
+    .container__texto{
+        display: block;
+        width: 50vw;
+        margin: 0;
+        text-align: center;
+    }
+     .container__texto-azul{
+        display: block;
+        margin: 0;
+        text-align: center;
+     }   
+     h1{
+        margin: 0;
+        text-align: center;
+        display: block;
+     }
+     h2{
+        margin: 0;
+        text-align: center;
+        display: block;
+     }
+
+     .container__botao{
+        display: block;
+        margin: 2em 2em;
+        width: 50vw;
+     }
+
+     body::before{
+        display: block;
+        margin: 2em 2em;
+
+     }
+     .container__imagem-robo{ 
+        display: block;
+        background-size: cover;
+     }
+    }
+
+
+
+    
