--- a/style.css
+++ b/style.css
@@ -91,56 +91,53 @@ h2 {
 @media screen and (max-width :768px) {
     .container{
         display: block;
-        background-image: none;
         background-repeat: no-repeat;
+        text-align: center;
     }
 
     .container__conteudo{
-        width: 50vw;
         display: block
     }
 
     .container__informacoes{
         display: block;
-        margin: 2em 2em;
-        width: 50vw;
+        text-align: center;
+        width: 99vw;
+        padding-bottom: 20vw;
+        
+        
     }
     .container__texto{
         display: block;
-        width: 50vw;
-        margin: 0;
-        text-align: center;
+        text-align: justify;
+        width: 88vw;
     }
      .container__texto-azul{
         display: block;
-        margin: 0;
-        text-align: center;
+        
      }   
      h1{
-        margin: 0;
         text-align: center;
         display: block;
+        padding-bottom: 10vw;
      }
      h2{
-        margin: 0;
         text-align: center;
         display: block;
      }
 
      .container__botao{
         display: block;
-        margin: 2em 2em;
-        width: 50vw;
      }
 
      body::before{
-        display: block;
-        margin: 2em 2em;
+        text-align: center;
 
      }
      .container__imagem-robo{ 
-        display: block;
-        background-size: cover;
+        text-align: center;
+        width: 50vw;
+        padding-right: 50vw;
      }
     }
 
